--- a/gb/24/10/3/n14343327.md
+++ b/gb/24/10/3/n14343327.md
@@ -52,7 +52,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342794.md#1">台风来袭 北北基桃被疑未达标也放假</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942655.md#1" target="_blank">毛泽东73岁生日自杀的周小舟</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
